tests/ui/invalid_pymethod_names.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
 --> $DIR/lib.rs:1:12
  |
1 | #![feature(specialization)]
  |            ^^^^^^^^^^^^^^
  |
  = note: `#[warn(incomplete_features)]` on by default
  = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
  = help: consider using `min_specialization` instead, which is more stable and complete

warning: use of deprecated associated function `std::sync::atomic::AtomicBool::compare_and_swap`: Use `compare_exchange` or `compare_exchange_weak` instead
   --> $DIR/type_object.rs:186:14
    |
186 |             .compare_and_swap(false, true, Ordering::Acquire)
    |              ^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated associated function `std::sync::atomic::AtomicBool::compare_and_swap`: Use `compare_exchange` or `compare_exchange_weak` instead
   --> $DIR/type_object.rs:222:14
    |
222 |             .compare_and_swap(false, true, Ordering::Acquire)
    |              ^^^^^^^^^^^^^^^^

warning: 3 warnings emitted

error: name not allowed with this attribute
  --> $DIR/invalid_pymethod_names.rs:10:5
   |
10 |     #[name = "num"]
   |     ^^^^^^^^^^^^^^^

error: #[name] can not be specified multiple times
  --> $DIR/invalid_pymethod_names.rs:17:5
   |
17 |     #[name = "foo"]
   |     ^^^^^^^^^^^^^^^

error: name not allowed with this attribute
  --> $DIR/invalid_pymethod_names.rs:24:5
   |
24 |     #[name = "makenew"]
   |     ^^^^^^^^^^^^^^^^^^^
